--- a/reddit_clone_frontend/package.json
+++ b/reddit_clone_frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 25396 --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,11 +12,14 @@
     "@chakra-ui/cli": "^3.1.1",
     "@chakra-ui/react": "^3.1.1",
     "@emotion/react": "^11.13.3",
+    "dayjs": "^1.11.13",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "valibot": "1.0.0-beta.9",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
